Fix suggestion: https://github.com/FancyMcPlugins/FancyNpcs/issues/214